[package]
name = "superbonds-finance"
version = "1.7.3"
description = "Platform for BOND Trading"
authors = ["Brian Nguyen - NAD"]
license = "MIT"
edition = "2018"
publish = false

[dependencies]
solana-program = "1.7.4"
thiserror = "1.0.24"
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
arrayref = "0.3.6"
borsh = "0.9"
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.1"

[dev-dependencies]
proptest = "1.0"
solana-program-test = "1.7.4"
solana-sdk = "1.7.4"

[features]
test-bpf = []

[lib]
crate-type = ["cdylib", "lib"]
